[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-relay"
version = "0.1.1"
description = "MCP server that buffers Telegram bot messages for Claude Code without conflicting with long-polling clients."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Simon Jr." }]
keywords = ["mcp", "model-context-protocol", "telegram", "llm", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[project.scripts]
telegram-relay = "server:main"

[project.urls]
Homepage = "https://github.com/danielsimonjr/telegram-relay"
Issues = "https://github.com/danielsimonjr/telegram-relay/issues"

[tool.setuptools]
py-modules = ["server"]

[tool.ruff]
line-length = 100
target-version = "py310"
